<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:autofillHints="Result" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_7"
        app:layout_constraintStart_toStartOf="@+id/newNumber"
        app:layout_constraintTop_toBottomOf="@+id/newNumber" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_3"
        app:layout_constraintBaseline_toBaselineOf="@id/button2"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_9"
        app:layout_constraintBaseline_toBaselineOf="@id/button8"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_minus"
        app:layout_constraintBaseline_toBaselineOf="@id/button3"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_divide"
        app:layout_constraintBaseline_toBaselineOf="@id/button9"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_0"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_2"
        app:layout_constraintBaseline_toBaselineOf="@id/button1"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_multi"
        app:layout_constraintBaseline_toBaselineOf="@id/button6"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_5"
        app:layout_constraintBaseline_toBaselineOf="@id/button4"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_equal"
        app:layout_constraintBaseline_toBaselineOf="@id/dot"
        app:layout_constraintStart_toEndOf="@+id/dot" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_6"
        app:layout_constraintBaseline_toBaselineOf="@id/button5"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_plus"
        app:layout_constraintBaseline_toBaselineOf="@id/equal"
        app:layout_constraintStart_toEndOf="@+id/equal" />

    <Button
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_dot"
        app:layout_constraintBaseline_toBaselineOf="@id/button0"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/_8"
        app:layout_constraintBaseline_toBaselineOf="@id/button7"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/newNumber"
        app:layout_constraintEnd_toStartOf="@+id/newNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/result"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:autofillHints="New Number" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/backspace"
        app:layout_constraintStart_toStartOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button0" />

    <Button
        android:id="@+id/buttonClearAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/clearall"
        app:layout_constraintBaseline_toBaselineOf="@id/buttonBack"
        app:layout_constraintStart_toEndOf="@+id/buttonBack" />

</androidx.constraintlayout.widget.ConstraintLayout>